<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9DFC3"
    tools:context=".FolderActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#4E1F00"
        android:paddingStart="10dp"
        android:paddingTop="35dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/your_items"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <!-- RecyclerView for displaying images -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvImages"
        android:layout_width="match_parent"
        android:layout_height="474dp"
        android:layout_above="@+id/llButtonsParent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:scrollbars="vertical" />

    <!-- Parent LinearLayout for two rows -->
    <LinearLayout
        android:id="@+id/llButtonsParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp">

        <!-- First Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/btnImportFiles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:text="@string/import_files" />

            <Button
                android:id="@+id/btnImportImages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:text="@string/import_images" />

        </LinearLayout>

        <!-- Second Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnCaptureImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:text="@string/capture_image" />

            <Button
                android:id="@+id/btnShareNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:text="@string/share_notes" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
